--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.185e2.js" charset="utf-8"></script>
+<script src="src/settings.5d8aa.js" charset="utf-8"></script>
 
-<script src="main.9f6a6.js" charset="utf-8"></script>
+<script src="main.52983.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
