--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.1df3a.js" charset="utf-8"></script>
+<script src="src/settings.6a2fe.js" charset="utf-8"></script>
 
-<script src="main.74c10.js" charset="utf-8"></script>
+<script src="main.636dd.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
