--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.e4b6f.js" charset="utf-8"></script>
+<script src="src/settings.353b9.js" charset="utf-8"></script>
 
-<script src="main.423b4.js" charset="utf-8"></script>
+<script src="main.03f18.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
