--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.353b9.js" charset="utf-8"></script>
+<script src="src/settings.d924d.js" charset="utf-8"></script>
 
-<script src="main.03f18.js" charset="utf-8"></script>
+<script src="main.80223.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,7 +76,7 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.cab18.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.61d98.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.b6620.js', window.boot);
       }
