--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.ee822.js" charset="utf-8"></script>
+<script src="src/settings.563f5.js" charset="utf-8"></script>
 
-<script src="main.f8855.js" charset="utf-8"></script>
+<script src="main.00e3b.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
