--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | othello</title>
+  <title>Cocos Creator | Riversi</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -37,7 +37,7 @@
   <!--<link rel="apple-touch-icon" href=".png" />-->
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.25fc5.css"/>
+  <link rel="stylesheet" type="text/css" href="style-mobile.89acc.css"/>
   <link rel="icon" href="favicon.8de18.ico"/>
 </head>
 <body>
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.563f5.js" charset="utf-8"></script>
+<script src="src/settings.f7845.js" charset="utf-8"></script>
 
-<script src="main.00e3b.js" charset="utf-8"></script>
+<script src="main.0d347.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
