--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.f7845.js" charset="utf-8"></script>
+<script src="src/settings.71b28.js" charset="utf-8"></script>
 
-<script src="main.0d347.js" charset="utf-8"></script>
+<script src="main.422e5.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
