--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.efa8f.js" charset="utf-8"></script>
+<script src="src/settings.f63f2.js" charset="utf-8"></script>
 
-<script src="main.82574.js" charset="utf-8"></script>
+<script src="main.7267a.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
