--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.20784.js" charset="utf-8"></script>
+<script src="src/settings.be3c7.js" charset="utf-8"></script>
 
-<script src="main.39a52.js" charset="utf-8"></script>
+<script src="main.bb4a2.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
