--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.e6f16.js" charset="utf-8"></script>
+<script src="src/settings.4c9fd.js" charset="utf-8"></script>
 
-<script src="main.8742c.js" charset="utf-8"></script>
+<script src="main.0ebe7.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
