--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.4c9fd.js" charset="utf-8"></script>
+<script src="src/settings.2db05.js" charset="utf-8"></script>
 
-<script src="main.0ebe7.js" charset="utf-8"></script>
+<script src="main.da79d.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
