--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <!--<link rel="apple-touch-icon" href=".png" />-->
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.89acc.css"/>
-  <link rel="icon" href="favicon.8de18.ico"/>
+  <link rel="stylesheet" type="text/css" href="style-mobile.3f75c.css"/>
+  <link rel="icon" href="favicon.4f1e5.ico"/>
 </head>
 <body>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.1a28e.js" charset="utf-8"></script>
+<script src="src/settings.ba802.js" charset="utf-8"></script>
 
-<script src="main.f5767.js" charset="utf-8"></script>
+<script src="main.aae5a.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,7 +76,7 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.26ada.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.61d98.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.b6620.js', window.boot);
       }
