--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
 
   <script type="text/javascript" src="src/assets/Scripts/analytic/gta-amplitude.js"></script>
-  <script src="src/settings.b847a.js" charset="utf-8"></script>
-  <script src="main.4f951.js" charset="utf-8"></script>
+  <script src="src/settings.d63a7.js" charset="utf-8"></script>
+  <script src="main.0e077.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
