--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
 
   <script type="text/javascript" src="src/assets/Scripts/analytic/gta-amplitude.js"></script>
-  <script src="src/settings.f9f77.js" charset="utf-8"></script>
-  <script src="main.71372.js" charset="utf-8"></script>
+  <script src="src/settings.cff03.js" charset="utf-8"></script>
+  <script src="main.bc1ee.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     (function () {
